<resources>
    <string name="app_name">BinusPostScheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_account">Account</string>
    <string name="menu_dashboard">Dashboard</string>

    <string name="email_hint">example@example.com</string>
    <string name="password_hint">your password here</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="register_here">Register here!</string>
    <string name="emailFilled">Email must be filled</string>
    <string name="emailFormat">Email must be in email format</string>
    <string name="passFilled">Password must be filled</string>
    <string name="loading">Loading...</string>
    <string name="invalidCredential">Invalid Credential</string>
    <string name="login_here">Login here</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_full_name">your full name</string>
    <string name="type_your_password_again">type your password again</string>

    <string name="username_failed">Name must less than 18 characters</string>
    <string name="username_filled">Name must be filled</string>
    <string name="password_failed">Password must at least 6 characters</string>
    <string name="re_pass_failed">Confirm password must be same with password</string>
    <string name="sign_up_error">Register Error</string>

    <string name="schedule_post">Schedule a Post</string>
    <string name="connected_account">Connected Account</string>

    <string name="twitter.CONSUMER_KEY">t0zwc1GRA4mjoHsa3HwM1Q8fJ</string>
    <string name="twitter.CONSUMER_SECRET">pXwXPViI3q2eIwTPZmoNhDHBvGqSl6gPFuCI8WjxYLKLWb6kPJ</string>
    <string name="schedules">Schedules</string>

    <string name="facebook_app_id">472685857272246</string>
    <string name="fb_login_protocol_scheme">fb472685857272246</string>

    <string name="meeting_updated">Schedule updated</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fb_ig_acc">Facebook &amp; Instagram Account</string>

<!--    <string name="ig_connect_information">-->
<!--        Instagram not connected. Instagram account for autopost is integrated with your facebook account.-->
<!--        \n 1. Make sure to make your Instagram account connected with your facebook-->
<!--        \n 2. Your Instagram account must be a business account-->
<!--        \n 3. Make sure to choose facebook pages that connected with your Instagram account when login with Facebook-->
<!--        \n 4. If you have login with facebook but this message still appear, your Instagram account haven't connected-->

<!--    </string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="role">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="filterDay">
        <item>All</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>