<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.binuspostscheduler.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.binuspostscheduler.ui.schedules.SchedulesFragment"
        android:label="@string/schedules"
        tools:layout="@layout/fragment_schedules" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.binuspostscheduler.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.binuspostscheduler.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/account_fragment" />

</navigation>